Fix scrollbar appearing
Fixed: Scrollbar appearing after calculation

--- a/style.css
+++ b/style.css
@@ -170,6 +170,8 @@ body {
 #finalScoreDisplay {
 	position: relative;
 
+	width: 100px;
+
 	visibility: hidden;
 }
 
